# trdp-studio

./: .gitignore  README.md  TRDP-XML-Test-API-Reference.md
backend/: CMakeLists.txt
backend/cmake/: FindTRDP.cmake
backend/include/auth/: AuthManager.hpp  AuthService.hpp  PasswordHasher.hpp  User.hpp
backend/include/db/: Database.hpp
backend/include/http/: HttpRouter.hpp  JsonUtils.hpp
backend/include/network/: NetworkConfigService.hpp
backend/include/trdp/: ConfigService.hpp  PlanBuilder.hpp  TrdpConfigService.hpp  TrdpEngine.hpp  TrdpXmlParser.hpp  XmlUtils.hpp
backend/include/trdp/xml/: TrdpXmlLoader.hpp
backend/include/util/: LogService.hpp  Logger.hpp
backend/src/: main.cpp
backend/src/auth/: AuthManager.cpp  AuthService.cpp  PasswordHasher.cpp
backend/src/db/: Database.cpp
backend/src/http/: HttpRouter.cpp  JsonUtils.cpp
backend/src/network/: NetworkConfigService.cpp
backend/src/trdp/: ConfigService.cpp  PlanBuilder.cpp  TrdpConfigService.cpp  TrdpEngine.cpp  TrdpXmlParser.cpp  XmlUtils.cpp
backend/src/trdp/xml/: TrdpXmlLoader.cpp
backend/src/util/: LogService.cpp  Logger.cpp
config/: bidirectional-trdp-config.xml  reference-trdp-config.xml
frontend/: package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AppLayout.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: AccountPage.tsx  AppLogsPage.tsx  HelpPage.tsx  LoginPage.tsx  LogsPage.tsx  NetworkPage.tsx  TrdpCommPage.tsx  TrdpConfigPage.tsx  TrdpLogsPage.tsx
frontend/src/types/: index.ts
